# genfxn

./: .gitignore  AGENTS.md  ARCHITECTURE.md  AXES.md  CLAUDE.md  CURRENT_PLAN.md  CURR_SUB_GOAL.md  GOAL.md  README.md  TESTING.md  WORKING_MEMORY.md  detailed_fix.md  med_fix.md  pyproject.toml  quick_fix.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
.hypothesis/constants/: 01b90702993de510  03b1fd7f685f58cc  052a0952742682d1  06d33b5e54da5258  09779cbf6472fe92  0991aa23cd3eb160  0a16bd9b983b3729  0a221b7669d42414  0ac3f97fc5207e38  0bdcc2b32fce239b  0c350bce8c4bd388  0deb69f27e5c4823  0eed7cbea9ce5472  135fb9f2eaef7866  140607968fcdbf16  14da988ba78a64be  14f2cd7924b816c1  15da2c0a51517af3  16aa01923ce34f2a  16b9b97637b9b75c  183586cbc3ff3e1e  184dc58b022096a9  1959dca42e80079c  1de192d5cd54e5da  1f1aec8afb9c4264  1fb07de5f7912b7f  212180b86ef9dda2  22ede3f40a832869  234a5cddb4e16d85  25552fa48d570aae  265875c35a368851  27ba438254ffa519  27e4f14560386b1e  29508cef4c5d6ee9  299edc83c05754b2  2cd32d59b6df5e9b  30d4d37b425bcfc4  31914628139a2bab  386d20e83820c480  38fd564a7e566496  (+150 more)
artifacts/: intervals_calibration.json  sequence_dp_calibration.json
docs/: bitops_plan.md  claude_recommended_merge.md  code_review.md  codex_recommended_merge.md  fsm_difficulty.md  fsm_plan.md  graph_queries_plan.md  intervals_plan.md  llm_recommendations_ranked.md  new_family_recommendations.md  sequence_dp_plan.md  shared_rec_list.md  task1.md  task2.md  task3.md  temporal_logic_plan.md
docs/research/: multilingual_code_datasets.md
nbs/: string_rules.py
old_ref_impl/: cli.py
old_ref_impl/bitops/: __init__.py  ast_safety.py  queries.py  render.py  sampler.py  task.py  validate.py
old_ref_impl/core/: ast_hash.py  canonicalization.py  describe.py  family_registry.py  int64_safety.py  predicates.py  semantic_hash.py  spec_space.py  string_predicates.py  trace.py  transforms.py
old_ref_impl/fsm/: __init__.py  ast_safety.py  models.py  validate.py
old_ref_impl/graph_queries/: __init__.py  ast_safety.py  eval.py  models.py  sampler.py  validate.py
old_ref_impl/intervals/: __init__.py  ast_safety.py  models.py  queries.py  sampler.py  utils.py  validate.py
old_ref_impl/irt/: __init__.py  io.py  models.py  stratification.py
old_ref_impl/langs/: formatting.py  registry.py
old_ref_impl/piecewise/: ast_safety.py  queries.py  sampler.py
old_ref_impl/sequence_dp/: models.py  queries.py  sampler.py  (+1 more)
scripts/: analyze_difficulty.py  backfill_verification_cases.py  calibrate_graph_queries.py  calibrate_intervals.py  calibrate_sequence_dp.py  calibrate_temporal_logic.py  check_generated_code_quality.py  check_generated_dataset_verification.py  demo_phase1_dsl.py  demo_phase2_piecewise.py  demo_phase3_stateful.py  demo_phase4_splits.py  demo_phase5_cli.py  gen_diagram_data.py  generate_balanced_suites.py  migrate_dataset_task_ids.py  patch_empty_descriptions.py  run_all_checks.py  run_tests.py
tests/: conftest.py  helpers.py  test_analyze_difficulty.py  test_ast_hash.py  test_backfill_verification_cases_script.py  test_bitops.py  test_bitops_runtime_parity.py  test_calibrate_graph_queries_script.py  test_calibrate_intervals_script.py  test_calibrate_sequence_dp_script.py  test_calibrate_temporal_logic_script.py  test_check_generated_code_quality_script.py  test_check_generated_dataset_verification_script.py  test_cli.py  test_cli_verification.py  test_core_codegen_spec_lookup.py  test_core_dsl.py  test_core_models.py  test_core_sampling_trace.py  test_core_validate.py  test_describe.py  test_difficulty.py  test_family_registry.py  test_fsm.py  test_fsm_runtime_parity.py  test_generate_balanced_suites_script.py  test_generated_code_quality.py  test_graph_queries.py  test_graph_queries_runtime_parity.py  test_helpers.py  test_intervals.py  test_intervals_runtime_parity.py  test_irt.py  test_java_render.py  test_migrate_dataset_task_ids_script.py  test_piecewise.py  test_piecewise_runtime_parity.py  test_presets.py  test_query_quality.py  test_query_quality_guardrails.py  (+42 more)
tools/: class_diagram.html
viewer/backend/: pyproject.toml
viewer/backend/src/viewer_api/: loader.py  main.py  routes.py  run_loader.py  run_routes.py
viewer/backend/tests/: test_routes.py  test_run_routes.py
(+337 files in other folders)
