[project]
name = "genfxn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Danielle Rothermel", email = "danielle.rothermel@gmail.com" },
]
requires-python = ">=3.12"
dependencies = ["pydantic>=2.0", "typer>=0.9", "srsly>=2.4"]

[project.scripts]
genfxn = "genfxn.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]

[dependency-groups]
dev = [
    "ty>=0.0.14",
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.14",
]

[tool.pytest.ini_options]
markers = [
    "slow: longer-running tests for expanded confidence",
    "full: exhaustive validation tests (slowest, highest confidence)",
]
