[project]
name = "genfxn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Danielle Rothermel", email = "danielle.rothermel@gmail.com" },
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "typer>=0.9",
    "srsly>=2.4",
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-rust>=0.24.0",
]

[project.scripts]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 80
include = ["*.py", "*.pyi"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
include = ["src", "scripts"]

[dependency-groups]
dev = [
    "ty>=0.0.14",
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.14",
    "hypothesis==6.151.9",
]

[tool.pytest.ini_options]
addopts = "-n auto --dist=worksteal"
markers = []
