[project]
name = "viewer-api"
version = "0.1.0"
description = "FastAPI backend for genfxn trace viewer"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "typer>=0.9",
    "srsly>=2.4",
    "genfxn",
]

[project.scripts]
viewer-api = "viewer_api.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/viewer_api"]

[tool.uv.sources]
genfxn = { path = "../..", editable = true }

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
